--- a/index.html
+++ b/index.html
@@ -629,8 +629,247 @@
             </div>
           </div>
         </div>
+
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide-to="0"
+              class="active text-bg-dark"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExample"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExample"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExample"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="assets/img/portfolio/s1.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="500"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/s2.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/s3.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/s4.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon text-bg-dark"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon text-bg-dark"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <div class="py-3">
+          <p id="wew" class="text-center bg-info">
+            <b
+              >This is our final term that focuses in DataBase Design and
+              Implemantation.
+            </b>
+          </p>
+        </div>
+        <!-- End Portfolio Carousel -->
       </section>
       <!-- /Resume Section -->
+
+      <!-- Portfolio Section -->
+      <section id="portfolio" class="portfolio section">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <h2>Portfolio</h2>
+        </div>
+        <!-- End Section Title -->
+
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active text-bg-dark"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+            <button
+              type="button"
+              class="text-bg-dark"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="4"
+              aria-label="Slide 5"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="assets/img/portfolio/ss-main.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="500"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/ss-1.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/ss-2.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/ss-3.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/portfolio/ss-4.png"
+                class="d-block w-100"
+                alt="..."
+                height="500"
+                width="300"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon text-bg-dark"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon text-bg-dark"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="py-3">
+          <p id="wew" class="text-center bg-info">
+            <b
+              >This is my project, a Shopping Catalogue that only uses HTML and
+              CSS. It was designed to meet all customers needs. From trendy
+              fashion like shoes, sandals, backpacks and slingbags. Enjoy a
+              seamless shopping and discover your next favorite product
+              today!</b
+            >
+          </p>
+        </div>
+      </section>
+      <!-- End Portfolio Carousel -->
 
       <!-- Services Section -->
       <section id="services" class="services section">
