revising of contact

--- a/index.html
+++ b/index.html
@@ -877,16 +877,22 @@
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Contact</h2>
-          <p>
-            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
-            consectetur velit
-          </p>
+          <h4><b>ARE YOU IN NEED OF MY SERVICES?</b></h4>
+          <button type="button" class="btn btn-primary">Hire Me!</button>
         </div>
         <!-- End Section Title -->
 
         <div class="container" data-aos="fade" data-aos-delay="100">
           <div class="row gy-4">
-            <div class="col-lg-4">
+            <div class="col-lg-6 col-md-5">
+              <img
+                src="assets/img/formal1.png"
+                class="img-fluid rounded-circle border border-black"
+                alt=""
+              />
+            </div>
+
+            <div class="col-lg-6 col-md-7 col-sm-9">
               <div
                 class="info-item d-flex"
                 data-aos="fade-up"
@@ -895,7 +901,13 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+
+                  <a
+                    href="https://www.google.com/maps/place/Tagabaca,+Butuan+City,+Agusan+Del+Norte/@8.904848,125.5627718,13.5z/data=!4m6!3m5!1s0x3301ea0be2daff45:0xf9892d061b6eb498!8m2!3d8.9081473!4d125.5712576!16s%2Fg%2F11b6hsyyjj?entry=ttu&g_ep=EgoyMDI0MTAyMi4wIKXMDSoASAFQAw%3D%3D"
+                    target="_blank"
+                  >
+                    <p>Tagabaca, Butuan City, Philippines</p>
+                  </a>
                 </div>
               </div>
               <!-- End Info Item -->
@@ -907,8 +919,8 @@
               >
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>Call Me</h3>
+                  <p>+639916082996</p>
                 </div>
               </div>
               <!-- End Info Item -->
@@ -920,73 +932,14 @@
               >
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <h3>Email Me</h3>
+                  <a href="mailto:jhonleovil@gmail.com" target="_blank">
+                    <p>jhonleovil@gmail.com</p>
+                  </a>
                 </div>
               </div>
+
               <!-- End Info Item -->
-            </div>
-
-            <div class="col-lg-8">
-              <form
-                action="forms/contact.php"
-                method="post"
-                class="php-email-form"
-                data-aos="fade-up"
-                data-aos-delay="200"
-              >
-                <div class="row gy-4">
-                  <div class="col-md-6">
-                    <input
-                      type="text"
-                      name="name"
-                      class="form-control"
-                      placeholder="Your Name"
-                      required=""
-                    />
-                  </div>
-
-                  <div class="col-md-6">
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="email"
-                      placeholder="Your Email"
-                      required=""
-                    />
-                  </div>
-
-                  <div class="col-md-12">
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="subject"
-                      placeholder="Subject"
-                      required=""
-                    />
-                  </div>
-
-                  <div class="col-md-12">
-                    <textarea
-                      class="form-control"
-                      name="message"
-                      rows="6"
-                      placeholder="Message"
-                      required=""
-                    ></textarea>
-                  </div>
-
-                  <div class="col-md-12 text-center">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">
-                      Your message has been sent. Thank you!
-                    </div>
-
-                    <button type="submit">Send Message</button>
-                  </div>
-                </div>
-              </form>
             </div>
             <!-- End Contact Form -->
           </div>
