--- a/index.html
+++ b/index.html
@@ -951,22 +951,34 @@
     <footer id="footer" class="footer position-relative">
       <div class="container">
         <h3 class="sitename">Jhon Leovil Avelino</h3>
-        <p>
-          Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
-          eligendi fuga maxime saepe commodi placeat.
+        <p id="foot">
+          "If You Don't Take Risks, You Can't Create a Future."
+          <br />
+          <b>Monkey D. Luffy</b>
         </p>
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-skype"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a
+            href="https://www.facebook.com/jhonleovil.avelino"
+            title="Facebook"
+            target="_blank"
+            ><i class="bi bi-facebook"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/jhonleovil.avelino"
+            title="Messenger"
+            target="_blank"
+            ><i class="bi bi-messenger"></i
+          ></a>
+          <a href="tiktok.com/@jhonleovilavelino" title="TikTok" target="_blank"
+            ><i class="bi bi-tiktok"></i
+          ></a>
         </div>
         <div class="container">
           <div class="copyright">
-            <span>Copyright</span>
-            <strong class="px-1 sitename">Alex Smith</strong>
-            <span>All Rights Reserved</span>
+            <strong class="px-1 sitename"
+              >Jhon Leovil Avelino | Personal Website</strong
+            >
+            <br />
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
