changes the portfolio section

--- a/index.html
+++ b/index.html
@@ -40,14 +40,6 @@
 
     <!-- Overide CSS File -->
     <link rel="stylesheet" href="styles.css" />
-
-    <!-- =======================================================
-  * Template Name: MyResume
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body class="index-page">
@@ -640,237 +632,213 @@
         </div>
         <!-- End Section Title -->
 
-        <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active text-bg-dark"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="3"
-              aria-label="Slide 4"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="4"
-              aria-label="Slide 5"
-            ></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="assets/img/portfolio/ss-main.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="500"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/ss-1.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/ss-2.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/ss-3.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/ss-4.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev"
-          >
-            <span
-              class="carousel-control-prev-icon text-bg-dark"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next"
-          >
-            <span
-              class="carousel-control-next-icon text-bg-dark"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        <div class="py-3">
-          <p id="wew" class="text-center bg-info">
-            <b
-              >This is my project, a Shopping Catalogue that only uses HTML and
-              CSS. It was designed to meet all customers needs. From trendy
-              fashion like shoes, sandals, backpacks and slingbags. Enjoy a
-              seamless shopping and discover your next favorite product
-              today!</b
-            >
-          </p>
-        </div>
-        <!-- End Portfolio Carousel -->
+        <!-- Projects -->
+        <div class="container">
+          <div>
+            <!-- class="p-4 box d-flex flex-column align-items-center justify-content-center"
+          data-aos="fade-left"
+          data-aos-duration="1000" -->
+            <h2><strong>Project Name:</strong> Laz Shoppe</h2>
 
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExample"
-              data-bs-slide-to="0"
-              class="active text-bg-dark"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExample"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExample"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
-            <button
-              type="button"
-              class="text-bg-dark"
-              data-bs-target="#carouselExample"
-              data-bs-slide-to="3"
-              aria-label="Slide 4"
-            ></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="assets/img/portfolio/s1.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="500"
-              />
+            <h5 class="text-center pb-2">
+              <em>
+                This is my project, a Shopping Catalogue that only uses HTML and
+                CSS. It was designed to meet all customers needs. From trendy
+                fashion like shoes, sandals, backpacks and slingbags. Enjoy a
+                seamless shopping and discover your next favorite product today!
+              </em>
+            </h5>
+            <div class="row">
+              <div class="col-lg-4 col-md-6 project-item isotope-item">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/ss-1.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 project-item isotope-item py-1">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/ss-main.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 project-item isotope-item">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/ss-2.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/s2.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/s3.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/portfolio/s4.png"
-                class="d-block w-100"
-                alt="..."
-                height="500"
-                width="300"
-              />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
-            <span
-              class="carousel-control-prev-icon text-bg-dark"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
-            <span
-              class="carousel-control-next-icon text-bg-dark"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+            <div class="row">
+              <div class="col-lg-6 col-md-6 project-item isotope-item py-2">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/ss-3.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
 
-        <div class="py-3">
-          <p id="wew" class="text-center bg-info">
-            <b
-              >This is our final term that focuses in DataBase Design and
-              Implemantation.
-            </b>
-          </p>
+              <div class="col-lg-6 col-md-6 project-item isotope-item py-2">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/ss-4.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <!-- class="p-4 box d-flex flex-column align-items-center justify-content-center"
+          data-aos="fade-left"
+          data-aos-duration="1000" -->
+            <h2 class="pt-5">
+              <strong>Project Name:</strong> Database Project
+            </h2>
+
+            <h5 class="text-center pb-2">
+              <em>
+                This is our final term that focuses in DataBase Design and
+                Implemantation.
+              </em>
+            </h5>
+            <div class="row">
+              <div class="col-lg-6 col-md-6 project-item isotope-item">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/s1.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 project-item isotope-item pt-4">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/s2.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6 col-md-6 project-item isotope-item py-2">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/s3.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 project-item isotope-item py-2">
+                <div class="position-relative project-content h-100">
+                  <img
+                    src="assets/img/portfolio/s4.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div
+                    class="zoom-icon position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i
+                      class="bi bi-zoom-in text-primary bg-white p-2 rounded-circle"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- End Portfolio Carousel -->
       </section>
-      <!-- End Portfolio Carousel -->
+      <!-- Projects -->
+
+      <!-- Zoom Modal -->
+      <div class="modal fade" id="projectModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+          <div class="modal-content bg-dark border-0">
+            <div class="modal-body text-center">
+              <img
+                id="modalProjectImage"
+                src=""
+                class="img-fluid rounded"
+                alt="Zoomed Image"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- Contact Section -->
       <section id="contact" class="contact section">
