adding light and dark mode

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
               ><i class="bi bi-envelope navicon"></i><span>Contact</span></a
             >
           </li>
+          <div class="theme-toggle-switch">
+            <input type="checkbox" id="themeSwitch" />
+            <label for="themeSwitch">
+              <i class="bi bi-emoji-sunglasses-fill"></i>
+              <i class="bi bi-moon-fill"></i>
+              <span class="slider"></span>
+            </label>
+          </div>
         </ul>
       </nav>
     </header>
@@ -120,7 +128,7 @@
                 ></a>
 
                 <a
-                  href="tiktok.com/@jhonleovilavelino"
+                  href="https://www.tiktok.com/@jhonleovilavelino"
                   title="TikTok"
                   target="_blank"
                   ><i class="bi bi-tiktok"></i
