added editable section

--- a/index.html
+++ b/index.html
@@ -101,18 +101,26 @@
         <div class="container" data-aos="zoom-out">
           <div class="row justify-content-center">
             <div class="col-lg-9 col-md-12">
-              <h2>Jhon Leovil Avelino</h2>
+              <h2 id="profileName" tabindex="0">
+                Jhon Leovil Avelino
+                <button id="editNameBtn" class="btn btn-link p-0 ms-2">
+                  <i class="bi bi-pencil-fill"></i>
+                </button>
+              </h2>
+
               <p>
                 I'm a
                 <span
                   class="typed text-info"
-                  data-typed-items="IT Student, Freelancer, Video Editor,  Developer"
+                  data-typed-items="IT Student, Freelancer, Video Editor, Developer"
                   >Designer</span
-                ><span
+                >
+                <span
                   class="typed-cursor typed-cursor--blink"
                   aria-hidden="true"
                 ></span>
               </p>
+
               <div class="social-links">
                 <a
                   href="https://www.facebook.com/jhonleovil.avelino"
@@ -126,7 +134,6 @@
                   target="_blank"
                   ><i class="bi bi-messenger"></i
                 ></a>
-
                 <a
                   href="https://www.tiktok.com/@jhonleovilavelino"
                   title="TikTok"
@@ -138,7 +145,6 @@
           </div>
         </div>
       </section>
-      <!-- /Hero Section -->
 
       <!-- About Section -->
       <section id="about" class="about section">
@@ -229,7 +235,6 @@
                 <h5><b>Critical Thinker</b></h5>
               </div>
             </div>
-            <!-- End Stats Item -->
 
             <div
               class="col-lg-2 col-md-6 d-flex flex-column align-items-center"
@@ -239,8 +244,6 @@
                 <h5><b>Good Listener</b></h5>
               </div>
             </div>
-
-            <!-- End Stats Item -->
 
             <div
               class="col-lg-2 col-md-6 d-flex flex-column align-items-center"
@@ -268,7 +271,6 @@
                 <h5><b>Efficient</b></h5>
               </div>
             </div>
-            <!-- End Stats Item -->
           </div>
         </div>
       </section>
@@ -299,7 +301,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -315,7 +316,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -331,7 +331,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -347,7 +346,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
             </div>
 
             <div class="col-lg-6">
@@ -365,7 +363,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -381,7 +378,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -398,7 +394,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -415,7 +410,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
 
               <div class="progress">
                 <span class="skill"
@@ -432,7 +426,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- End Skills Item -->
             </div>
           </div>
         </div>
@@ -471,7 +464,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
 
               <div class="resume-item pb-0">
                 <h4>
@@ -493,7 +485,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
 
               <div class="resume-item pb-0">
                 <h4>
@@ -514,7 +505,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
 
               <div class="resume-item pb-0">
                 <h4>
@@ -537,7 +527,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
 
               <h3 class="resume-title">Trainings &amp; Seminars</h3>
               <div class="resume-item">
@@ -551,7 +540,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
             </div>
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
@@ -575,7 +563,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
 
               <div class="resume-item">
                 <h4>
@@ -596,7 +583,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
 
               <hr />
               <h3 class="resume-title">Education</h3>
@@ -608,7 +594,6 @@
                 <br />
                 <span>Brgy. Ampayon, Butuan City, Philippines</span>
               </div>
-              <!-- Edn Resume Item -->
               <hr />
               <h3 class="resume-title">Club &amp; Organization Affilitions</h3>
               <div class="resume-item">
@@ -625,7 +610,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Edn Resume Item -->
             </div>
           </div>
         </div>
@@ -643,9 +627,6 @@
         <!-- Projects -->
         <div class="container">
           <div>
-            <!-- class="p-4 box d-flex flex-column align-items-center justify-content-center"
-          data-aos="fade-left"
-          data-aos-duration="1000" -->
             <h2><strong>Project Name:</strong> Laz Shoppe</h2>
 
             <h5 class="text-center pb-2">
@@ -744,9 +725,6 @@
           </div>
 
           <div>
-            <!-- class="p-4 box d-flex flex-column align-items-center justify-content-center"
-          data-aos="fade-left"
-          data-aos-duration="1000" -->
             <h2 class="pt-5">
               <strong>Project Name:</strong> Database Project
             </h2>
@@ -886,7 +864,6 @@
                   </a>
                 </div>
               </div>
-              <!-- End Info Item -->
 
               <div
                 class="info-item d-flex"
@@ -899,7 +876,6 @@
                   <p>+639916082996</p>
                 </div>
               </div>
-              <!-- End Info Item -->
 
               <div
                 class="info-item d-flex"
@@ -914,8 +890,6 @@
                   </a>
                 </div>
               </div>
-
-              <!-- End Info Item -->
             </div>
             <!-- End Contact Form -->
           </div>
@@ -955,13 +929,6 @@
               >Jhon Leovil Avelino | Personal Website</strong
             >
             <br />
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you've purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
       </div>
